working application against dummy dweb_api endpoint

--- a/limo_api_manager/lib/dune
+++ b/limo_api_manager/lib/dune
@@ -1,2 +1,7 @@
 (library
- (name limo_api_manager))
+ (preprocess (pps ppx_yojson_conv))
+ (name Lib)
+ (libraries
+  cohttp
+  yojson
+  ppx_yojson_conv))
