--- a/limo_api_manager/bin/dune
+++ b/limo_api_manager/bin/dune
@@ -15,6 +15,7 @@
  (libraries
   Lib
   zarith
+  cryptokit
   extism
   cohttp-eio
   eio_main
@@ -25,4 +26,5 @@
   logs.fmt
   fmt.tty
   yojson
-  ppx_yojson_conv ))
+  ppx_yojson_conv
+  mirage-crypto-rng-eio))
