--- a/limo_api_manager/dune-project
+++ b/limo_api_manager/dune-project
@@ -20,7 +20,7 @@
  (name limo_api_manager)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune coq zarith extism cohttp cohttp-eio eio_main eio_linux tls tls-eio ca-certs logs fmt ppx_yojson_conv ppx_deriving yojson)
+ (depends ocaml dune coq zarith extism cohttp cohttp-eio eio_main eio_linux tls tls-eio ca-certs logs fmt ppx_yojson_conv ppx_deriving yojson cryptokit mirage-crypto-rng-eio)
  (tags
   (topics "to describe" your project)))
 
