--- a/limo_api_manager/theories/dune
+++ b/limo_api_manager/theories/dune
@@ -1,5 +1,5 @@
 (coq.theory
  (name ExampleLib)
  (package limo_api_manager)
- (synopsis "Example Coq Library for Adding Two Nats")
+ (synopsis "Example Coq Library")
  (modules (:standard)))
